--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "axios": "^0.19.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
