--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,14 @@
   "author": "MTPD",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.7.1"
+    "express-validator": "^6.2.0",
+    "mongoose": "^5.7.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
